try to fix font size issue on mobile safari

--- a/main.css
+++ b/main.css
@@ -59,3 +59,7 @@ header a {
 footer {
   margin-top: auto;
 }
+
+code {
+  -webkit-text-size-adjust: 100%;
+}
